--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,48 @@
-<p>footer works!</p>
+<mat-toolbar>
+  <!-- Author, date, repository -->
+  <div class="flex-row">
+    <p>Darién Julián Ramirez Estevez <strong>2023</strong></p>
+    <a
+      href="https://github.com/ianshalaga/youtube-videos-formating-web-native-tool"
+      target="_blank"
+      ><img
+        src="../../../assets/images/logo-github-white.png"
+        alt="GitHub repository"
+    /></a>
+  </div>
+  <div class="flex-row">
+    <!-- Github -->
+    <a href="https://github.com/ianshalaga" target="_blank"
+      ><img
+        src="../../../assets/images/logo-github-black.png"
+        alt="GitHub repository"
+    /></a>
+    <!-- LinkedIn -->
+    <a
+      href="https://www.linkedin.com/in/darienjramirez/"
+      target="_blank"
+      class="border-logo"
+      ><img
+        src="../../../assets/images/logo-linkedin.png"
+        alt="My LinkedIn Profile"
+    /></a>
+    <!-- InfoJobs -->
+    <a
+      href="https://www.infojobs.net/candidate/my-infojobs.xhtml?dgv=7987329436580453806"
+      target="_blank"
+      class="border-logo"
+      ><img
+        src="../../../assets/images/logo-infojobs.png"
+        alt="My InfoJobs Profile"
+    /></a>
+    <!-- TecnoEmpleo -->
+    <a
+      href="https://www.tecnoempleo.com/darien-julian-ramirez-estevez.mpt"
+      target="_blank"
+      class="border-logo"
+      ><img
+        src="../../../assets/images/logo-tecnoempleo.png"
+        alt="My TecnoEmpleo Profile"
+    /></a>
+  </div>
+</mat-toolbar>
