--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,36 @@
-<p>header works!</p>
+<mat-toolbar>
+  <!-- Logo -->
+  <img
+    class="logo"
+    src="../../../assets/images/logo-seyfer-studios.png"
+    alt="Seyfer Studios Logo"
+  />
+  <!-- Title -->
+  <h1>
+    <strong>Seyfer Studios</strong>: YouTube's Videos Formating Web Native Tool
+  </h1>
+  <!-- Channels -->
+  <div class="flex-row">
+    <a href="https://www.youtube.com/@SeyferStudios" target="_blank"
+      ><img
+        src="../../../assets/images/logo-youtube.png"
+        alt="Seyfer Studios YouTube Channel"
+    /></a>
+    <a href="https://www.twitch.tv/seyferstudios" target="_blank"
+      ><img
+        src="../../../assets/images/logo-twitch.png"
+        alt="Seyfer Studios Twitch Channel"
+    /></a>
+    <a href="https://twitter.com/ianshalaga" target="_blank"
+      ><img
+        src="../../../assets/images/logo-twitter.png"
+        alt="Seyfer Studios Twitter"
+    /></a>
+    <a href="https://www.instagram.com/ianshalaga/" target="_blank"
+      ><img src="../../../assets/images/logo-instagram.png" alt="My Instagram"
+    /></a>
+    <a href="https://www.facebook.com/darien.ramirez.9/" target="_blank"
+      ><img src="../../../assets/images/logo-facebook.png" alt="My Facebook"
+    /></a>
+  </div>
+</mat-toolbar>
