--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,24 @@
-<p>main works!</p>
+<form action="">
+  <app-folders></app-folders>
+  <!-- mkvmerge path -->
+  <!-- Final screens path -->
+  <!-- Input directorio -->
+  <!-- Game caracteristics -->
+  <!-- Info display -->
+  <mat-form-field>
+    <mat-label>Input</mat-label>
+    <input matInput />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select>
+      <mat-option value="one">First option</mat-option>
+      <mat-option value="two">Second option</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Textarea</mat-label>
+    <textarea matInput></textarea>
+  </mat-form-field>
+  <button mat-raised-button color="primary" type="submit">Enviar</button>
+</form>
